# Solitaire

./: CMakeLists.txt  Deck.cpp  Deck.h  Hand.cpp  Hand.h  Solitaire.cpp  Solitaire.h  SolitaireUI.cpp
